--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2018"
 
 [dependencies]
 rusty-hook = "^0.11.2"
+juniper = "0.14.2"
+actix-web = "3"
+env_logger = "0.7.1"
+serde = "1.0.103"
+serde_json = "1.0.44"
+serde_derive = "1.0.103"
